# qdrant-edge-demo

./: .gitignore  Makefile  README.md  app.py  config.py  pyproject.toml
backend/: server.py
glasses_x_edge/: capture.py  constants.py  embedding.py  queue.py  storage.py
